--- a/main/index.html
+++ b/main/index.html
@@ -422,17 +422,17 @@
       <section
         class="bg-cover bg-center bg-no-repeat padding-y-xxl overscroll-section__sticky-content js-overscroll-section__sticky-content"
         style="background-image: url('https://source.unsplash.com/collection/37930110/1600x900'); height:100vh;">
-        <div class="container max-width-adaptive-lg">
+        <div class="container max-width-adaptive-xl">
           <div class="bg bg-opacity-75% padding-md padding-lg@md rounded shadow-lg">
             <div class="text-sm opacity-60% margin-bottom-xxs">Welcome</div>
 
             <div class="text-component margin-bottom-sm">
               <h1 class="text-xxxl text-anim text-anim--rotate js-text-anim">
                 I want to help your business <span class="text-anim__wrapper js-text-anim__wrapper"><i
-                    class="text-anim__word text-anim__word--in js-text-anim__word">grow</i><i
-                    class="text-anim__word js-text-anim__word">earn</i><i
-                    class="text-anim__word js-text-anim__word">create</i><i
-                    class="text-anim__word js-text-anim__word">save</i></span> more
+                    class="text-anim__word text-anim__word--in js-text-anim__word"> 🌱 grow</i><i
+                    class="text-anim__word js-text-anim__word"> 💰 earn</i><i
+                    class="text-anim__word js-text-anim__word"> 🏗 create</i><i
+                    class="text-anim__word js-text-anim__word"> 🤑 save</i></span> more
               </h1>
             </div>
 
