--- a/main/faq.html
+++ b/main/faq.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <!--STYLE-->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
   <link rel="stylesheet" href="assets/css/ccdd.css">
   <!--IMPORTS-->
   <script src="https://kit.fontawesome.com/05a8f14e1c.js" crossorigin="anonymous"></script>
@@ -62,46 +62,54 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "ProfessionalService",
-      "name": "chrisConnellyDotDev",
-      "image": "https://chrisconnelly.dev/assets/media/img/logo/ccdd.svg",
-      "@id": "",
-      "url": "https://chrisconnelly.dev",
-      "telephone": "4038310028",
-      "priceRange": "$",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "15 Falworth Place NE",
-        "addressLocality": "Calgary",
-        "addressRegion": "AB",
-        "postalCode": "T3J1G1",
-        "addressCountry": "CA"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 51.10019519999999,
-        "longitude": -113.9504791
-      },
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday",
-          "Sunday"
-        ],
-        "opens": "00:00",
-        "closes": "23:59"
-      },
-      "sameAs": [
-        "https://facebook.com/chrisconnellydotdev",
-        "https://www.instagram.com/chrisconnellydotdev/",
-        "https://www.linkedin.com/in/chrisconnellydotdev/",
-        "https://github.com/teamallnighter"
-      ] 
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "What coding languages do you know?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "HTML, CSS, JavaScript and PHP"
+        }
+      },{
+        "@type": "Question",
+        "name": "Do you work with any frameworks or libraries?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, I work with many. Here are some of them though: React, Node, Sass, Laravel, Vue, Bootstrap, Materialize, Git, Grunt, Less, Gulp, Markdown, Svelte, Jquery,  Express, Next and Sails"
+        }
+      },{
+        "@type": "Question",
+        "name": "What API's have you worked with?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Apple Dev, Discord, Dropbox, Facebook, Github, Mailchimp, Paypal, Spotify, Stripe, Unsplash, Spotify"
+        }
+      },{
+        "@type": "Question",
+        "name": "How long does it take to build a website?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Some agencies may quote you 4 - 6 weeks to complete a basic website for you. 😱Becausee I am a freelance web developer, I can cut this time down to 2-4 weeks for a basic website."
+        }
+      },{
+        "@type": "Question",
+        "name": "What Assets do you need from me?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "this can change from project to project but, to get started I usually need: Your logo
+    Any images you want on the site
+    Contact information you want on the site
+    Your companies mission statement, bio ect
+    Any branding you have"
+        }
+      },{
+        "@type": "Question",
+        "name": "",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": ""
+        }
+      }]
     }
     </script>
 </head>
