--- a/main/index.html
+++ b/main/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <!--STYLE-->
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/ccdd.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
   <!--IMPORTS-->
   <script src="https://kit.fontawesome.com/05a8f14e1c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -988,11 +987,7 @@ return false;">Check out my FAQ page for more! &rarr;</a></p>
       </svg>
     </a>
   </main>
-  <script src="assets/js/scripts.js"></script>
-  <script src="assets/js/scroll.js"></script>
-  <script src="assets/js/wiggle.js"></script>
-
-
+  <script src="assets/js/scripts.min.js"></script>
 </body>
 
 </html>
