--- a/main/services.html
+++ b/main/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>document.getElementsByTagName("html")[0].className += " js";</script>
     <!--STYLE-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
     <link rel="stylesheet" href="assets/css/ccdd.css">
     <!--FONTS-->
     <script src="https://kit.fontawesome.com/05a8f14e1c.js" crossorigin="anonymous"></script>
@@ -207,7 +207,7 @@
         </div>
 
     </section>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
 </body>
 
 </html>
