--- a/main/thankyou.html
+++ b/main/thankyou.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>document.getElementsByTagName("html")[0].className += " js";</script>
     <!--STYLE-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
     <link rel="stylesheet" href="assets/css/ccdd.css">
     <link rel="stylesheet" href="assets/css/1_chameleonic-header.css">
 
