--- a/main/development.html
+++ b/main/development.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>document.getElementsByTagName("html")[0].className += " js";</script>
     <!--STYLE-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
     <link rel="stylesheet" href="assets/css/ccdd.css">
     <!--IMPORTS-->
     <script src="https://kit.fontawesome.com/05a8f14e1c.js" crossorigin="anonymous"></script>
@@ -725,7 +725,7 @@ return false;" class="btn btn--primary">Get A Free Quote</a>
         </a>
     </main>
     <!--CODYHOUSE-->
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
     <script src="assets/js/scroll.js"></script>
     <script src="assets/js/wiggle.js"></script>
 
