--- a/public/packages.html
+++ b/public/packages.html
@@ -370,7 +370,7 @@
                                 class="header-v2__nav-link">Customer Log
                                 in</a></li>
                         <li class="header-v2__nav-item header-v2__nav-item--main"><a
-                                href="/rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
                                                   `toolbar=no,
                                                    location=no,
                                                    status=no,
@@ -425,7 +425,16 @@
                         <div class="text-component">
                             <h3 class="js-cross-table__label">Freelancer</h3>
                             <p class="color-contrast-medium">Everything a one man army needs</p>
-                            <p><a href="#0" class="btn btn--primary width-100%">Select</a></p>
+                            <a href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                                  `toolbar=no,
+                                                   location=no,
+                                                   status=no,
+                                                   menubar=no,
+                                                   scrollbars=yes,
+                                                   resizable=yes,
+                                                   width=900,
+                                                   height=800`);
+                return false;" class="btn btn--primary width-100%">Select</a>
                             <p><a href="#0" class="color-contrast-high">Learn more</a></p>
                         </div>
                     </th>
@@ -434,7 +443,16 @@
                         <div class="text-component">
                             <h3 class="js-cross-table__label">Small Business</h3>
                             <p class="color-contrast-medium">Ideal for you and your crew</p>
-                            <p><a href="#0" class="btn btn--primary width-100%">Select</a></p>
+                            <a href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                                  `toolbar=no,
+                                                   location=no,
+                                                   status=no,
+                                                   menubar=no,
+                                                   scrollbars=yes,
+                                                   resizable=yes,
+                                                   width=900,
+                                                   height=800`);
+                return false;" class="btn btn--primary width-100%">Select</a>
                             <p><a href="#0" class="color-contrast-high">Learn more</a></p>
                         </div>
                     </th>
@@ -443,7 +461,16 @@
                         <div class="text-component">
                             <h3 class="js-cross-table__label">Medium Business</h3>
                             <p class="color-contrast-medium">Getting ready to take over the world?</p>
-                            <p><a href="#0" class="btn btn--primary width-100%">Select</a></p>
+                            <a href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                                  `toolbar=no,
+                                                   location=no,
+                                                   status=no,
+                                                   menubar=no,
+                                                   scrollbars=yes,
+                                                   resizable=yes,
+                                                   width=900,
+                                                   height=800`);
+                return false;" class="btn btn--primary width-100%">Select</a>
                             <p><a href="#0" class="color-contrast-high">Learn more</a></p>
                         </div>
                     </th>
@@ -890,24 +917,7 @@
                     </td>
 
                 </tr>
-                <tr class="cross-table__row cross-table__row--w-full js-cross-table__row--w-full">
-                    <th class="cross-table__cell text-left" colspan="4">Add On's</th>
-                </tr>
-                <tr class="cross-table__row">
-                    <th class="cross-table__cell text-left">Add a turn key solution</th>
 
-                    <td class="cross-table__cell">
-                        <a href="turnkey.html" class="btn btn--secondary width-100%">More Information</a>
-                    </td>
-
-                    <td class="cross-table__cell">
-                        <a href="turnkey.html" class="btn btn--secondary width-100%">More Information</a>
-                    </td>
-
-                    <td class="cross-table__cell">
-                        <a href="#crm-intro" class="btn btn--secondary width-100%">More Information</a>
-                    </td>
-                </tr>
 
 
                 <tr class="cross-table__row cross-table__row--w-full js-cross-table__row--w-full">
@@ -917,15 +927,42 @@
                     <th class="cross-table__cell text-left">Select a plan</th>
 
                     <td class="cross-table__cell">
-                        <a href="#0" class="btn btn--primary width-100%">Select</a>
+                        <a href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                                  `toolbar=no,
+                                                   location=no,
+                                                   status=no,
+                                                   menubar=no,
+                                                   scrollbars=yes,
+                                                   resizable=yes,
+                                                   width=900,
+                                                   height=800`);
+                return false;" class="btn btn--primary width-100%">Select</a>
                     </td>
 
                     <td class="cross-table__cell">
-                        <a href="#0" class="btn btn--primary width-100%">Select</a>
+                        <a href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                                  `toolbar=no,
+                                                   location=no,
+                                                   status=no,
+                                                   menubar=no,
+                                                   scrollbars=yes,
+                                                   resizable=yes,
+                                                   width=900,
+                                                   height=800`);
+                return false;" class="btn btn--primary width-100%">Select</a>
                     </td>
 
                     <td class="cross-table__cell">
-                        <a href="#0" class="btn btn--primary width-100%">Select</a>
+                        <a href="/pkg-rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
+                                                  `toolbar=no,
+                                                   location=no,
+                                                   status=no,
+                                                   menubar=no,
+                                                   scrollbars=yes,
+                                                   resizable=yes,
+                                                   width=900,
+                                                   height=800`);
+                return false;" class="btn btn--primary width-100%">Select</a>
                     </td>
                 </tr>
             </tbody>
