--- a/public/faq.html
+++ b/public/faq.html
@@ -104,10 +104,10 @@
         }
       },{
         "@type": "Question",
-        "name": "",
+        "name": "Where can I download my invoice?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": ""
+          "text": "You can access all reporting and invoicing on my customer portal"
         }
       }]
     }
@@ -451,17 +451,15 @@
 
                 <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
                   <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
+                    <p>You can access all reporting and invoicing on my <a href="https://portal.chrisconnelly.ca"
+                        target="_blank">customer portal</a></p>
                   </div>
                 </div>
               </li>
 
               <li class="accordion-v2__item  js-accordion__item">
                 <button class="reset accordion-v2__header padding-y-sm padding-x-md js-tab-focus" type="button">
-                  <span class="text-md">Why did my payment fail?</span>
+                  <span class="text-md">How do I set up my portal account?</span>
 
                   <svg class="icon accordion-v2__icon-arrow no-js:is-hidden" viewBox="0 0 20 20">
                     <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="round"
@@ -474,21 +472,15 @@
 
                 <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
                   <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
+                    <p>You will receive an email from me with an introduction to the portal and instructions for signing
+                      up</p>
                   </div>
                 </div>
               </li>
 
               <li class="accordion-v2__item  js-accordion__item">
                 <button class="reset accordion-v2__header padding-y-sm padding-x-md js-tab-focus" type="button">
-                  <span class="text-md">Can I pay using Paypal?</span>
+                  <span class="text-md">What if I lose my password?</span>
 
                   <svg class="icon accordion-v2__icon-arrow no-js:is-hidden" viewBox="0 0 20 20">
                     <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="round"
@@ -501,10 +493,7 @@
 
                 <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
                   <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
+                    <p>No sweat either let me know or select the 'lost password' section on the login.</p>
                   </div>
                 </div>
               </li>
@@ -512,110 +501,7 @@
             </ul>
           </div>
 
-          <div>
-            <h2 id="privacy" class="text-md margin-bottom-xs">Privacy</h2>
 
-            <ul class="accordion-v2 flex flex-column gap-xxxs js-accordion" data-animation="on" data-multi-items="on"
-              data-version="v2">
-
-              <li class="accordion-v2__item  js-accordion__item">
-                <button class="reset accordion-v2__header padding-y-sm padding-x-md js-tab-focus" type="button">
-                  <span class="text-md">Can I specify my own private key?</span>
-
-                  <svg class="icon accordion-v2__icon-arrow no-js:is-hidden" viewBox="0 0 20 20">
-                    <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round">
-                      <line x1="3" y1="3" x2="17" y2="17" />
-                      <line x1="17" y1="3" x2="3" y2="17" />
-                    </g>
-                  </svg>
-                </button>
-
-                <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
-                  <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
-                  </div>
-                </div>
-              </li>
-
-              <li class="accordion-v2__item  js-accordion__item">
-                <button class="reset accordion-v2__header padding-y-sm padding-x-md js-tab-focus" type="button">
-                  <span class="text-md">My files are missing. How do I get them back?</span>
-
-                  <svg class="icon accordion-v2__icon-arrow no-js:is-hidden" viewBox="0 0 20 20">
-                    <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round">
-                      <line x1="3" y1="3" x2="17" y2="17" />
-                      <line x1="17" y1="3" x2="3" y2="17" />
-                    </g>
-                  </svg>
-                </button>
-
-                <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
-                  <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
-                  </div>
-                </div>
-              </li>
-
-              <li class="accordion-v2__item  js-accordion__item">
-                <button class="reset accordion-v2__header padding-y-sm padding-x-md js-tab-focus" type="button">
-                  <span class="text-md">How can I delete my account data?</span>
-
-                  <svg class="icon accordion-v2__icon-arrow no-js:is-hidden" viewBox="0 0 20 20">
-                    <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round">
-                      <line x1="3" y1="3" x2="17" y2="17" />
-                      <line x1="17" y1="3" x2="3" y2="17" />
-                    </g>
-                  </svg>
-                </button>
-
-                <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
-                  <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
-                  </div>
-                </div>
-              </li>
-
-              <li class="accordion-v2__item  js-accordion__item">
-                <button class="reset accordion-v2__header padding-y-sm padding-x-md js-tab-focus" type="button">
-                  <span class="text-md">Do you store any private information?</span>
-
-                  <svg class="icon accordion-v2__icon-arrow no-js:is-hidden" viewBox="0 0 20 20">
-                    <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round">
-                      <line x1="3" y1="3" x2="17" y2="17" />
-                      <line x1="17" y1="3" x2="3" y2="17" />
-                    </g>
-                  </svg>
-                </button>
-
-                <div class="accordion-v2__panel padding-top-xxxs padding-x-md padding-bottom-md js-accordion__panel">
-                  <div class="text-component line-height-lg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum a ab quae quas optio ut
-                      officia quia? Modi at impedit dolorem est voluptatem facilis, beatae atque tenetur, soluta
-                      dolorum inventore sapiente laborum. Alias esse soluta porro distinctio aperiam, qui suscipit.
-                    </p>
-                  </div>
-                </div>
-              </li>
-
-            </ul>
-          </div>
         </div>
       </div>
     </div>
